deploy/grafana/base/deploymeny.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring.grafana  # Sets Deployment name
  labels:
    app: grafana
    project: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
      project: monitoring
  template:
    metadata:
      labels:
        app: grafana
        project: monitoring
    spec:
      containers:
        - name: monitoring-grafana
          image: grafana/grafana-oss:10.3.1 # Sets Image
          imagePullPolicy: "IfNotPresent"
          resources:
            limits:
              memory: 250M
            requests:
              memory: 100M
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: monitoring-grafana-data-volume
            - mountPath: /etc/dashboards
              name: monitoring-grafana-dashboard-volume
            - mountPath: /etc/grafana/provisioning
              name: monitoring-grafana-provisioning-volume
            - mountPath: /etc/grafana/grafana.ini
              name: monitoring-grafana-ini-volume
      volumes:
        - name: monitoring-grafana-data-volume
          persistentVolumeClaim:
            claimName: monitoring.grafana.data-claim
        - name: monitoring-grafana-dashboard-volume
          persistentVolumeClaim:
            claimName: monitoring.grafana.dashboard-claim
        - name: monitoring-grafana-provisioning-volume
          persistentVolumeClaim:
            claimName: monitoring.grafana.provisioning-claim
        - name: monitoring-grafana-ini-volume
          persistentVolumeClaim:
            claimName: monitoring.grafana.ini-claim
      restartPolicy: Always
